User controller  all methods, register, login start

--- a/licenta/CinemaManagement/appsettings.json
+++ b/licenta/CinemaManagement/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "CinemaManagementContext": "Server=(localdb)\\mssqllocaldb;Database=CinemaManagement;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "Authentication": {
+    "Token": "thisisthesecretforgeneratingakey(mustbeatleast32bitlong)",
+    "Issuer": "https://localhost:7086",
+    "Audience": "CinemaManagementContextApi"
+  },
   "AllowedHosts": "*"
 }
