--- a/licenta/CinemaManagement.Application/CinemaManagement.Application.csproj
+++ b/licenta/CinemaManagement.Application/CinemaManagement.Application.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\CinemaManagement.Domain\CinemaManagement.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="11.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
+  </ItemGroup>
+
 </Project>
