--- a/licenta/CinemaManagement.Application/CinemaManagement.Application.csproj
+++ b/licenta/CinemaManagement.Application/CinemaManagement.Application.csproj
@@ -15,4 +15,9 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Genres\Commands\" />
+    <Folder Include="Genres\Queries\" />
+  </ItemGroup>
+
 </Project>
