--- a/licenta/CinemaManagement.Infrastructure/CinemaManagement.Infrastructure.csproj
+++ b/licenta/CinemaManagement.Infrastructure/CinemaManagement.Infrastructure.csproj
@@ -20,6 +20,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="X.PagedList" Version="8.4.7" />
   </ItemGroup>
 
   <ItemGroup>
